--- a/Course/Economics/Accounting/video/deskrip.html
+++ b/Course/Economics/Accounting/video/deskrip.html
@@ -26,19 +26,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="course.html">Course</a>
+                    <a class="nav-link" href="../course.html">Course</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="../about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ask-us.html">Contact</a>
+                    <a class="nav-link" href="../contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ask-us.html">Login</a>
+                    <a class="nav-link" href="../login.html">Login</a>
                 </li>
             </ul>
         </div>
